fixed wrong alignment in news section for text with icon

--- a/styles/main.css
+++ b/styles/main.css
@@ -566,5 +566,6 @@ body {
 .cta-with-icon {
     display: flex;
     flex-direction: row;
+    align-items: flex-end;
     gap: 8px;
 }
